fdo#50632 IDE: update Object Catalog when closing a document

Change-Id: Ia635aee1611eaff663906e2238bf23a5013242a3